--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Valentine's Day Surprise</title>
+    <title>Valentine's Day Proposal</title>
     <link rel="icon" href="images/heart.png" type="image/x-icon" />
   </head>
   <body
